<resources>
    <string name="application_name">&TERMUX_APP_NAME;</string>
    <string name="shared_user_label">&TERMUX_APP_NAME; user</string>
    <string name="permission_run_command_label">Run commands in &TERMUX_APP_NAME; environment</string>
    <string name="permission_run_command_description">execute arbitrary commands within &TERMUX_APP_NAME;
        environment and access files</string>
    <string name="bootstrap_installer_body">Installing bootstrap packages…</string>
    <string name="bootstrap_error_title">Unable to install bootstrap</string>
    <string name="bootstrap_error_body">&TERMUX_APP_NAME; was unable to install the bootstrap packages.</string>
    <string name="bootstrap_error_abort">Abort</string>
    <string name="bootstrap_error_try_again">Try again</string>
    <string name="bootstrap_error_not_primary_user_message">&TERMUX_APP_NAME; can only be run as the primary user.
        \nBootstrap binaries compiled for &TERMUX_APP_NAME; have hardcoded $PREFIX path and cannot be installed
        under any path other than:\n%1$s.</string>
    <string name="bootstrap_error_installed_on_portable_sd">&TERMUX_APP_NAME; cannot be installed on
        portable/external/removable sd card on your device.
        \nBootstrap binaries compiled for &TERMUX_APP_NAME; have hardcoded $PREFIX path and cannot be installed
        under any path other than:\n%1$s.</string>
    <string name="action_new_session">New session</string>
    <string name="action_new_session_failsafe">Failsafe</string>
    <string name="title_max_terminals_reached">Max terminals reached</string>
    <string name="msg_max_terminals_reached">Close down existing ones before creating new.</string>
    <string name="title_rename_session">Set session name</string>
    <string name="action_rename_session_confirm">Set</string>
    <string name="title_create_named_session">New named session</string>
    <string name="action_create_named_session_confirm">Create</string>
    <string name="action_toggle_soft_keyboard">Keyboard</string>
    <string name="msg_enabling_terminal_toolbar">Enabling Terminal Toolbar</string>
    <string name="msg_disabling_terminal_toolbar">Disabling Terminal Toolbar</string>
    <string name="action_select_url">Select URL</string>
    <string name="title_select_url_dialog">Click URL to copy or long press to open</string>
    <string name="title_select_url_none_found">No URL found in the terminal.</string>
    <string name="msg_select_url_copied_to_clipboard">URL copied to clipboard</string>
    <string name="action_share_transcript">Share transcript</string>
    <string name="title_share_transcript">Terminal transcript</string>
    <string name="title_share_transcript_with">Send transcript to:</string>
    <string name="action_share_selected_text">Share selected text</string>
    <string name="title_share_selected_text">Terminal Text</string>
    <string name="title_share_selected_text_with">Send selected text to:</string>
    <string name="action_autofill_password">Autofill password</string>
    <string name="action_reset_terminal">Reset</string>
    <string name="msg_terminal_reset">Terminal reset</string>
    <string name="action_kill_process">Kill process (%d)</string>
    <string name="title_confirm_kill_process">Really kill this session?</string>
    <string name="action_style_terminal">Style</string>
    <string name="action_toggle_keep_screen_on">Keep screen on</string>
    <string name="action_open_help">Help</string>
    <string name="action_open_settings">Settings</string>
    <string name="action_report_issue">Report Issue</string>
    <string name="msg_generating_report">Generating Report</string>
    <string name="msg_add_termux_debug_info">Add termux debug info to report?</string>
    <string name="error_styling_not_installed">The &TERMUX_STYLING_APP_NAME; Plugin App is not installed.</string>
    <string name="action_styling_install">Install</string>
    <string name="notification_action_exit">Exit</string>
    <string name="notification_action_wake_lock">Acquire wakelock</string>
    <string name="notification_action_wake_unlock">Release wakelock</string>
    <string name="error_display_over_other_apps_permission_not_granted_to_start_terminal">&TERMUX_APP_NAME;
        requires
        \"Display over other apps\" permission to start terminal sessions from background on Android >= 10.
        Grants it from Settings -> Apps -> &TERMUX_APP_NAME; -> Advanced</string>
    <string name="error_termux_service_invalid_execution_command_runner">Invalid execution command runner to TermuxService: `%1$s`</string>
    <string name="error_termux_service_unsupported_execution_command_runner">Unsupported execution command runner to TermuxService: `%1$s`</string>
    <string name="error_termux_service_unsupported_execution_command_shell_create_mode">Unsupported execution command shell create mode to TermuxService: `%1$s`</string>
    <string name="error_termux_service_execution_command_shell_name_unset">Shell name not set but `%1$s` shell create mode passed</string>
    <string name="error_run_command_service_invalid_intent_action">Invalid intent action to RunCommandService: `%1$s`</string>
    <string name="error_run_command_service_invalid_execution_command_runner">Invalid execution command runner to RunCommandService: `%1$s`</string>
    <string name="error_run_command_service_mandatory_extra_missing">Mandatory extra missing to RunCommandService: \"%1$s\"</string>
    <string name="error_run_command_service_api_help">Visit %1$s for more info on RUN_COMMAND Intent usage.</string>
    <string name="title_file_received">Save file in ~/downloads/</string>
    <string name="action_file_received_edit">Edit</string>
    <string name="action_file_received_open_directory">Open directory</string>
    <string name="error_termux_service_start_failed_general">Failed to start TermuxService. Check logcat for exception message.</string>
    <string name="error_termux_service_start_failed_bg">Failed to start TermuxService while app is in background due to android bg restrictions.</string>
    <string name="title_activity_termux_settings">&TERMUX_APP_NAME; Settings</string>
    <string name="termux_preferences_title">&TERMUX_APP_NAME;</string>
    <string name="termux_preferences_summary">Preferences for &TERMUX_APP_NAME; app</string>
    <string name="termux_debugging_preferences_title">Debugging</string>
    <string name="termux_debugging_preferences_summary">Preferences for debugging</string>
    <string name="termux_logging_header">Logging</string>
    <string name="termux_log_level_title">Log Level</string>
    <string name="termux_terminal_view_key_logging_enabled_title">Terminal View Key Logging</string>
    <string name="termux_terminal_view_key_logging_enabled_off">Logs will not have entries for terminal view keys. (Default)</string>
    <string name="termux_terminal_view_key_logging_enabled_on">Logcat logs will have entries for terminal view keys.
                    These are very verbose and should be disabled under normal circumstances or will cause performance issues.</string>
    <string name="termux_plugin_error_notifications_enabled_title">Plugin Error Notifications</string>
    <string name="termux_plugin_error_notifications_enabled_off">Disable flashes and notifications for plugin errors.</string>
    <string name="termux_plugin_error_notifications_enabled_on">Show flashes and notifications for plugin errors. (Default)</string>
    <string name="termux_crash_report_notifications_enabled_title">Crash Report Notifications</string>
    <string name="termux_crash_report_notifications_enabled_off">Disable notifications for crash reports.</string>
    <string name="termux_crash_report_notifications_enabled_on">Show notifications for crash reports. (Default)</string>
    <string name="termux_terminal_io_preferences_title">Terminal I/O</string>
    <string name="termux_terminal_io_preferences_summary">Preferences for terminal I/O</string>
    <string name="termux_keyboard_header">Keyboard</string>
    <string name="termux_soft_keyboard_enabled_title">Soft Keyboard Enabled</string>
    <string name="termux_soft_keyboard_enabled_off">Soft keyboard will be disabled.</string>
    <string name="termux_soft_keyboard_enabled_on">Soft keyboard will be enabled. (Default)</string>
    <string name="termux_soft_keyboard_enabled_only_if_no_hardware_title">Soft Keyboard Only If No Hardware</string>
    <string name="termux_soft_keyboard_enabled_only_if_no_hardware_off">Soft keyboard will be enabled even if
                    hardware keyboard is connected. (Default)</string>
    <string name="termux_soft_keyboard_enabled_only_if_no_hardware_on">Soft keyboard will be enabled only if
                    no hardware keyboard is connected.</string>
    <string name="termux_terminal_view_preferences_title">Terminal View</string>
    <string name="termux_terminal_view_preferences_summary">Preferences for terminal view</string>
    <string name="termux_terminal_view_view_header">View</string>
    <string name="termux_terminal_view_terminal_margin_adjustment_title">Terminal Margin Adjustment</string>
    <string name="termux_terminal_view_terminal_margin_adjustment_off">Terminal margin adjustment will be disabled.</string>
    <string name="termux_terminal_view_terminal_margin_adjustment_on">Terminal margin adjustment will be enabled.
                    It should be enabled to try to fix the issue where soft keyboard covers part of extra keys/terminal view.
                    If it causes screen flickering on your devices, then disable it. (Default)</string>
    <string name="termux_api_preferences_title">&TERMUX_API_APP_NAME;</string>
    <string name="termux_api_preferences_summary">Preferences for &TERMUX_API_APP_NAME; app</string>
    <string name="termux_float_preferences_title">&TERMUX_FLOAT_APP_NAME;</string>
    <string name="termux_float_preferences_summary">Preferences for &TERMUX_FLOAT_APP_NAME; app</string>
    <string name="termux_tasker_preferences_title">&TERMUX_TASKER_APP_NAME;</string>
    <string name="termux_tasker_preferences_summary">Preferences for &TERMUX_TASKER_APP_NAME; app</string>
    <string name="termux_widget_preferences_title">&TERMUX_WIDGET_APP_NAME;</string>
    <string name="termux_widget_preferences_summary">Preferences for &TERMUX_WIDGET_APP_NAME; app</string>
    <string name="about_preference_title">About</string>
    <string name="donate_preference_title">Donate</string>
    <string name="title_msg">安装Rootfs页面</string>
    <string name="install_rootfs">安装基础系统</string>
    <string name="install_rootfs_ubuntu">安装ubuntu(自带)</string>
    <string name="install_rootfs_other">安装其它rootfs</string>
    <string name="jump_termux">跳转到终端</string>
    <string name="install_log">安装日志</string>
    <string name="install_settings">设置</string>
    <string name="install_settings_debug_toast">测试版本未开放设置,请关注正式版本</string>
    <string name="waiting_installation">等待日志安装\n当前版本:</string>
    <string name="not_installation">当前没有安装操作系统，不能跳转</string>
    <string name="install_ok">安装完成,请点击跳转到终端使用系统</string>
    <string name="file_type_error">选择文件格式不正确,当前支持\nzr、tar.gz、tar.xz常用格式</string>
    <string name="zero_settings">ZeroRootfs(ZR) 设置</string>
    <string name="zero_open_debug">开启调试模式</string>
    <string name="zero_open_debug_sum">注意,此选项会关闭你目前运行的所有会话!\n开启高级模式启动之后不会自动执行startrootfs.sh可自由编辑目录下文件.</string>
    <string name="zero_sdcard">创建sdcard快捷方式</string>
    <string name="zero_sdcard_sum">在home目录下创建sdcard快捷方式,方便与内存卡相互复制东西</string>
    <string name="zero_start_termux">启动直接进入终端</string>
    <string name="zero_start_termux_sum">开启之后不显示安装界面，直接跳转到终端。再次取消设置在终端左侧点击进入设置</string>
    <string name="termux_settings">Termux原生设置</string>
    <string name="termux_settings_note">进入Termux原生设置内容</string>
    <string name="create_sdcard">sdcard目录创建成功！</string>
    <string name="exists_sdcard">sdcard目录已存在，不需要创建！</string>
    <string name="not_install">当前系统正在安装，请勿重复点击！</string>
</resources>