<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:background="@color/color_2b2b2b">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/color_ffffff"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginLeft="5dp"
                android:layout_alignParentRight="true"
                android:text="@string/zero_settings"
                android:layout_height="wrap_content"/>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                app:cardElevation="0dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/color_55000000"
                app:cardCornerRadius="6dp"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_marginRight="70dp"
                        android:id="@+id/zr_open_debug_ll"
                        android:padding="10dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/color_ffffff"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:text="@string/zero_open_debug"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/md_grey_500"
                            android:textStyle="bold"
                            android:textSize="13sp"
                            android:text="@string/zero_open_debug_sum"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:orientation="vertical"
                        android:layout_marginRight="10dp">
                        <androidx.appcompat.widget.SwitchCompat
                            android:layout_width="wrap_content"
                            android:id="@+id/zr_open_debug_switch"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                app:cardElevation="0dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/color_55000000"
                app:cardCornerRadius="6dp"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/start_termux_ll"
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_marginRight="70dp"
                        android:padding="10dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/color_ffffff"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:text="@string/zero_start_termux"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/md_grey_500"
                            android:textStyle="bold"
                            android:textSize="13sp"
                            android:text="@string/zero_start_termux_sum"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:orientation="vertical"
                        android:layout_marginRight="10dp">
                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/start_termux_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                app:cardElevation="0dp"
                android:id="@+id/zr_create_sdcard_ll"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/color_55000000"
                app:cardCornerRadius="6dp"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_marginRight="50dp"
                        android:padding="10dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/color_ffffff"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:text="@string/zero_sdcard"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/md_grey_500"
                            android:textStyle="bold"
                            android:textSize="13sp"
                            android:text="@string/zero_sdcard_sum"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:orientation="vertical"
                        android:layout_marginRight="10dp">
                        <ImageView
                            android:layout_width="15dp"
                            android:src="@mipmap/up_down"
                            android:rotation="270"
                            android:layout_height="15dp"/>
                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                app:cardElevation="0dp"
                android:id="@+id/termux_settings"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/color_55000000"
                app:cardCornerRadius="6dp"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="vertical"
                        android:layout_marginRight="50dp"
                        android:padding="10dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:textColor="@color/color_ffffff"
                            android:textStyle="bold"
                            android:textSize="15sp"
                            android:text="@string/termux_settings"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/md_grey_500"
                            android:textStyle="bold"
                            android:textSize="13sp"
                            android:text="@string/termux_settings_note"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:orientation="vertical"
                        android:layout_marginRight="10dp">
                        <ImageView
                            android:layout_width="15dp"
                            android:src="@mipmap/up_down"
                            android:rotation="270"
                            android:layout_height="15dp"/>
                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</LinearLayout>
